<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LandingActivity">

    <ImageView
        android:id="@+id/ivPhotoLanding"
        android:layout_width="match_parent"
        android:layout_height="425dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/photo_landing"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:id="@+id/lLText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivPhotoLanding"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landing_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landing_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="35sp"
            android:textColor="@color/textPrimary"
            android:fontFamily="@font/inter_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landing_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"/>
    </LinearLayout>
    
    <Button
        android:id="@+id/btnStarted"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/btn_landing"
        app:layout_constraintTop_toBottomOf="@+id/lLText"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="@color/bgBtn"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnStarted"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landing_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="17sp"
            android:textColor="@color/textSecondary"
            android:fontFamily="@font/inter_medium"
            app:layout_constraintTop_toBottomOf="@+id/btnLanding"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/toLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landing_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:textColor="@color/textPrimaryVariant"
            android:fontFamily="@font/inter_medium"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>