<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivBgUpLogin"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_up_login"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivBgUpLogin"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="-50dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_1"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:background="@drawable/input_background"
            android:textSize="23sp"
            android:textColorHint="#AAAAAA"
            android:paddingVertical="14dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:background="@drawable/input_background"
            android:textSize="23sp"
            android:textColorHint="#AAAAAA"
            android:paddingVertical="14dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/lLText"
            android:backgroundTint="@color/bgBtn"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_down_login"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>