<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/ivBgUpHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_home_up"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnNotif"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/notif"
        android:layout_margin="17dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="17dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintTop_toBottomOf="@+id/btnLanding"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_medium"
            app:layout_constraintTop_toBottomOf="@+id/btnLanding"
            android:layout_marginEnd="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:inputType="text"
            android:background="@drawable/input_background"
            android:hint="@string/home_3"
            android:paddingVertical="14dp"
            android:textColorHint="#AAAAAA"
            android:drawableStart="@drawable/icon_search"
            android:drawablePadding="14dp"
            android:paddingStart="20dp"
            android:layout_marginTop="10dp"
            tools:ignore="RtlSymmetry"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivBgBannerHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_home_banner"
        app:layout_constraintTop_toBottomOf="@+id/ivBgUpHome"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="45dp"/>

    <LinearLayout
        android:id="@+id/lLbanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/ivBgBannerHome"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintTop_toBottomOf="@+id/btnLanding"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textColor="@color/textOnPrimary"
            android:fontFamily="@font/inter_medium"
            app:layout_constraintTop_toBottomOf="@+id/btnLanding"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintTop_toBottomOf="@+id/btnLanding"/>
        <Button
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="@string/home_7"
            android:backgroundTint="@color/textOnPrimary"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/lLbanner"
        android:layout_margin="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_weight"
            android:text="@string/home_8"
            android:textColor="@color/textOnPrimary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:backgroundTint="@color/white"
            android:padding="20dp"
            android:textAllCaps="false"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_weight"
            android:text="@string/home_9"
            android:textColor="@color/textOnPrimary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:backgroundTint="@color/white"
            android:padding="20dp"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_marginHorizontal="40dp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_weight"
            android:text="@string/home_10"
            android:textColor="@color/textOnPrimary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:backgroundTint="@color/white"
            android:padding="20dp"
            android:textAllCaps="false"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPopular"
        app:layout_constraintTop_toBottomOf="@+id/lLMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_15"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_bold"/>

    <HorizontalScrollView
        app:layout_constraintTop_toBottomOf="@+id/tvPopular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginStart="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/logo_splash_screen"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Title 1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="8dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Description 1"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/logo_splash_screen"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Title 1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="8dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Description 1"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/logo_splash_screen"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Title 1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="8dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Description 1"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/logo_splash_screen"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Title 1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="8dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Description 1"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/ivBgDownHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_home_down"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/ivBgDownHome">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_home"
            android:text="@string/home_11"
            android:textColor="@color/white"
            android:backgroundTint="@color/textOnPrimary"
            android:textAllCaps="false"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_forum"
            android:text="@string/home_12"
            android:textColor="@color/white"
            android:backgroundTint="@color/textOnPrimary"
            android:textAllCaps="false"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_article"
            android:text="@string/home_13"
            android:textColor="@color/white"
            android:backgroundTint="@color/textOnPrimary"
            android:textAllCaps="false"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_profile"
            android:text="@string/home_14"
            android:textColor="@color/white"
            android:backgroundTint="@color/textOnPrimary"
            android:textAllCaps="false"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>